--- a/task0003/index.html
+++ b/task0003/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/main.js"></script>
+    <script src="js/utils.js"></script>
 </head>
 
 <body>
@@ -18,27 +19,8 @@
         <ul class="folder-list">
             <p class="all">所有任务（11）</p>
             <p class="catagory">分类列表</p>
-            <li>
-                <div class="folder-name">毕业设计
-                    <button class="btn btn-delete"></button>
-                </div>
-                <ul class="task-list">
-                    <li>task6</li>
-                    <li>task5</li>
-                </ul>
-            </li>
-            <li>
-                <div class="folder-name">毕业设计2
-                    <button class="btn btn-delete"></button>
-                </div>
-            </li>
-            <li>
-                <div class="folder-name">毕业设计3
-                    <button class="btn btn-delete"></button>
-                </div>
-            </li>
             <div class="bottom-panel">
-                <span>新增分类</span>
+                <span id="add-folder">新增分类</span>
             </div>
         </ul>
         <div class="todo-list">
@@ -47,30 +29,20 @@
                 <li>未完成</li>
                 <li>已完成</li>
             </ul>
-            <ul class="time-line">
-                <span>2018-10-8</span>
-                <li class="selected">todo-1</li>
-                <li>todo-2</li>
-                <li>todo-3</li>
-            </ul>
-            <ul class="time-line">
-                <span>2018-10-8</span>
-                <li>todo-1</li>
-                <li>todo-2</li>
-                <li>todo-3</li>
-            </ul>
             <div class="bottom-panel">
-                <span>新增任务</span>
+                <span id="add-task">新增任务</span>
             </div>
         </div>
         <div class="editor">
             <div class="editor-header task-title">
-                <span class="title">todo-1</span>
+                <input type="text" name="task-name" disabled>
                 <button class="btn btn-edit"></button>
                 <button class="btn btn-finish"></button>
             </div>
-            <div class="editor-header task-time">任务时间：2018-10-8</div>
-            <div class="task-edit">这是edit</div>
+            <div class="editor-header task-time">任务时间：<input type="text" name="task-time" disabled></div>
+            <div class="task-edit">
+                <textarea disabled></textarea>
+            </div>
         </div>
     </div>
 </body>
