--- a/task0003/index.html
+++ b/task0003/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
         <ul class="folder-list">
-            <p class="all">所有任务（11）</p>
+            <p class="all">所有任务</p>
             <p class="catagory">分类列表</p>
             <div class="bottom-panel">
                 <span id="add-folder">新增分类</span>
